# catch22

./: .gitignore  .gitmodules  README.md  catch22.m  featureList.txt
C/: .gitignore  CMakeLists.txt  CO_AutoCorr.c  CO_AutoCorr.h  DN_HistogramMode_10.c  DN_HistogramMode_5.c  DN_Mean.c  DN_Mean.h  DN_OutlierInclude.c  DN_Spread_Std.c  DN_Spread_Std.h  FC_LocalSimple.c  IN_AutoMutualInfoStats.c  MD_hrv.c  Makefile  PD_PeriodicityWang.c  SB_BinaryStats.c  SB_CoarseGrain.c  SB_MotifThree.c  SB_TransitionMatrix.c  SC_FluctAnal.c  SP_Summaries.c  butterworth.c  fft.c  fft.h  helper_functions.c  helper_functions.h  histcounts.c  main.c  main.h  runAllTS  runAllTS.sh  run_features  runtests.sh  splinefit.c  stats.c  stats.h
C/run_features.dSYM/Contents/: Info.plist
C/run_features.dSYM/Contents/Resources/DWARF/: run_features
C/run_features.dSYM/Contents/Resources/Relocations/aarch64/: run_features.yml
C_polished/: .gitignore
Matlab/: CO_Embed2_Dist_tau_d_expfit_meandiff.m  CO_FirstMin_ac.m  CO_HistogramAMI_even_2_5.m  CO_f1ecac.m  CO_trev_1_num.m  DN_HistogramMode_10.m  DN_HistogramMode_5.m  DN_Mean.m  DN_OutlierInclude_n_001_mdrmd.m  DN_OutlierInclude_p_001_mdrmd.m  DN_Spread_Std.m  FC_LocalSimple_mean1_tauresrat.m  FC_LocalSimple_mean3_stderr.m  IN_AutoMutualInfoStats_40_gaussian_fmmi.m  MD_hrv_classic_pnn40.m  PD_PeriodicityWang_th0_01.m  SB_BinaryStats_diff_longstretch0.m  SB_BinaryStats_mean_longstretch1.m  SB_MotifThree_quantile_hh.m  SB_TransitionMatrix_3ac_sumdiagcov.m  SC_FluctAnal_2_dfa_50_1_2_logi_prop_r1.m  SC_FluctAnal_2_rsrangefit_50_1_logi_prop_r1.m  (+2 more)
(+2562 files in other folders)
